--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -162,9 +162,9 @@
 }
 
 @mixin plp_subhdr_open_mob {
-  font-size: 13 px;
+  font-size: 14px;
   font-family: $font-Montserrat;
-  color: $med-charcoal;
+  color: $charcoal19;
 }
 
 @mixin plp_coll_name_desktop {
