Colletion Specific Fixes

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -187,7 +187,7 @@
 }
 
 @mixin plp_breadcrumbs {
-  color: tint(#000, 50%);
+  color: #19191955;
   letter-spacing: 1px;
   font-family: $font-Lato;
 }
