--- a/src/components/Breadcrumbs/styles.scss
+++ b/src/components/Breadcrumbs/styles.scss
@@ -14,10 +14,6 @@
         
     }
     a{
-        color: tint(#000, 60%) !important;
+        color: #19191955;
     }
-    a:hover {
-        color: $cerise;
-    }
-
 }
