--- a/src/components/dropdown/secondaryHeaderDropdown/styles.scss
+++ b/src/components/dropdown/secondaryHeaderDropdown/styles.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        user-select: none;
     }
     .caret{
         border-top: 6px dashed;
@@ -36,6 +37,7 @@
             font-family: $font-Montserrat;
             font-size: 12px;
             color: $charcoal19;
+            margin-bottom: 0;
             li{
                 height: $secondary-header-height;
                 line-height: $secondary-header-height;
