--- a/src/containers/giftcard/styles.scss
+++ b/src/containers/giftcard/styles.scss
@@ -334,6 +334,7 @@ input[type="radio"]:checked+label:before {
 .price-block {
   span {
     @include b3_14px_montserrat_aqua();
+    color: #3c7979;
     margin: 10px 25px;
     background-color: #fff;
     width: 220px;
@@ -344,7 +345,7 @@ input[type="radio"]:checked+label:before {
     border: 2px solid transparent;
   }
   > p {
-    @include b4_12px_montserrat_light_charcoal();
+    @include b4_12px_montserrat_medium_charcoal();
     text-transform: uppercase;
   }
   span:hover {
