--- a/src/components/pairItWith/styles.scss
+++ b/src/components/pairItWith/styles.scss
@@ -2,9 +2,7 @@
 @import "../../styles/partials/mixins";
 
 .header {
-    font-size: 25px;
-    font-family: $font-Serif;
-    color: #333;
+    @include h2_24px_lora_charcoal();
     line-height: 60px;
     text-transform: capitalize;
     text-align: center;
