--- a/src/components/pairItWith/PDPLooksGridItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksGridItem/styles.scss
@@ -10,7 +10,7 @@
 }
 .image-content {
     text-align: center;
-    height: 140px;
+    height: auto;
     margin-top: 15px;
     width: 100%;
     white-space: nowrap;
