--- a/src/components/pairItWith/PDPLooksGridItem/styles.scss
+++ b/src/components/pairItWith/PDPLooksGridItem/styles.scss
@@ -123,7 +123,7 @@
     .image-content {
         padding: 0 10px;
         margin-top: 10px;
-        // height: 134px;
+        margin-bottom: 10px;
     }
 }
 
