--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -316,7 +316,7 @@
     &:after {
       content: '';
       float: right;
-      border: solid #ab1e56;
+      border: solid $gold;
       border-width: 0 1px 1px 0;
       width: 8px;
       height: 8px;
@@ -648,7 +648,7 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
   }
 }
 .select_size {
-  border: 1px solid #ab1e56 !important;
+  border: 1px solid $gold !important;
   background-color: white !important;
 }
 .size-list-bg1 li {
