--- a/src/containers/careerNew/components/Landing/landing.scss
+++ b/src/containers/careerNew/components/Landing/landing.scss
@@ -15,7 +15,7 @@
 .dept_card_wrapper{
     // display: flex;
     // flex-wrap: wrap;
-    justify-content: center;
+    // justify-content: center;
     padding: 20px 100px;
     cursor: pointer;
 
@@ -26,7 +26,7 @@
     .dept_card{        
         opacity: 1;
         position: relative;
-        padding:6px;
+        padding:10px 6px;
         flex: 0 0 25%;
         max-width: 25%;
 
@@ -54,9 +54,11 @@
                 opacity: 1;
                 margin: auto;
                 top: 60px;
+                margin-top: 27px;
 
                 @media screen and (max-width: 992px) {
                     margin-top: 20px;
+                    font: normal normal normal 16px/25px $font-Lora;
                 }
             }
 
@@ -153,7 +155,7 @@
     .apply_section_btn{
         background: #4C4C4C 0% 0% no-repeat padding-box;
         opacity: 1;
-        width: 30%;
+        // width: 30%;
         height: 60px;
         color: $white;
         text-align: center;
@@ -162,6 +164,8 @@
         margin-top: 30px;
         border: none;
         margin-bottom: 100px;
+        text-transform: uppercase;
+        padding: 20px 125px;
 
         &:hover{
             color: #4C4C4C;
@@ -171,7 +175,8 @@
 
         @media screen and (max-width: 992px) {
             margin-bottom: 50px;
-            width: 100%;
+            padding: 20px 65px;
+            // width: 100%;
         }
     }
 }
