--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -364,7 +364,7 @@
                         color: $lgtDefault;
                         text-transform: uppercase;
                         opacity: 1;
-                        padding: 6px 12px;
+                        padding: 10px 20px;
                         margin: 20px 0px;
         
                         &:hover{
@@ -372,6 +372,10 @@
                             background: #FFFFFF00 0% 0% no-repeat padding-box;
                             border: 1px solid $aquablue;
                             opacity: 1;
+                        }
+
+                        @media screen and (max-width: 767px) {
+                            padding: 10px 16px;
                         }
                     }
                 }
