--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -449,6 +449,10 @@
             background-color: #F9F8F6;
             text-align: left;
             font-size: 12px;
+            min-width: 120px;
+            max-width: 220px;
+            width: auto;
+            padding-right: 60px;
           }
         }
       }
