--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1113,11 +1113,10 @@ input {
   font-weight: bold;
 }
 .npf-msg {
-font-size: 20px;
 letter-spacing: 1px;
-color: tint(#000, 50%);
+@include b3_14px_montserrat_light_charcoal();
   span {
-    color: $cerise;
+    @include b3_14px_montserrat_gold();
   }
 }
 
@@ -1267,6 +1266,9 @@ visibility: visible !important;
     &:hover{
       @include b3_14px_montserrat_medium_charcoal();
     }
+  }
+  b{
+    font-weight: 600;
   }
   .discountprice {
     color: $cerise;
@@ -1692,8 +1694,13 @@ ul.inner-menu-mobile {
   padding: 0 10rem;
   @include b5_10px_montserrat_light_charcoal();
 }
+.product-name {
+  padding: 0 11rem;
+  @include b5_10px_montserrat_light_charcoal();
+}
 .collection {
     width: 35%;
+    margin-left: 5px;
    .title{
     @include b4_12px_montserrat_light_charcoal();
     margin-top: 5px;
@@ -1709,4 +1716,8 @@ ul.inner-menu-mobile {
   b {
     font-weight: 600;
   }
+  cursor: pointer;
+}
+.collectionlist {
+  display: inline-flex;
 }
