fixed search page issue

--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -401,6 +401,11 @@
       right: 5px;
     }
   }
+  .menulevel2-open {
+    &:after {
+      transform: rotate(45deg);
+    }
+  }
   .selected-cat-shop{
     color: $gold;
   }
