--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -8,7 +8,7 @@
         display: flex;
     
         .career_list_wrp_left{
-            width: 30%;
+            // width: 30%;
             padding: 45px;
             margin-right: 2px;
             position: sticky;
@@ -16,8 +16,8 @@
             top: 80px;
             align-self: flex-start;
             background: $white 0% 0% no-repeat padding-box;
-            box-shadow: 0px 3px 6px #00000029;
-            min-height: 60vh;
+            box-shadow: 0px 0px 6px #00000029;
+            min-height: 100vh;
 
     
             .filter_li{
@@ -57,7 +57,7 @@
         
                         &:after {
 
-                            @media screen and (max-width: 767px) {
+                            @media screen and (max-width: 992px) {
                                 content: 'x';
                                 float: right;
                                 position: absolute;
@@ -216,7 +216,7 @@
                 display: none;
             }
 
-            @media screen and (max-width: 767px) {
+            @media screen and (max-width: 992px) {
                 position: fixed;
                 transform: translateY(300%);
                 transition: all 0.3s ease-in;
@@ -224,7 +224,7 @@
             }
         }
 
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 992px) {
            
 
             .show{
@@ -243,13 +243,13 @@
         }
     
         .career_list_wrp_right{
-            width: 70%;
-            padding: 60px;
+            // width: 70%;
+            padding: 60px 0px 20px 60px;
             background: $white;
 
-            @media screen and (max-width: 767px) {
-                width: auto;
-                padding: 30px;
+            @media screen and (max-width: 992px) {
+                // width: auto;
+                padding: 25px;
             }
             
             .opportunities_count{
@@ -264,13 +264,13 @@
                 text-align: center;
                 margin: 150px;
 
-                @media screen and (max-width: 767px) {
+                @media screen and (max-width: 992px) {
                     margin: 20px;
                 }
 
-                @media screen and (max-width: 992px)  and (min-width:768px){
-                    margin: 100px;
-                }
+                // @media screen and (max-width: 992px)  and (min-width:992px){
+                //     margin: 100px;
+                // }
 
                 .no_resords_heading{
                     font: normal normal normal 20px/25px $font-Lora;
@@ -325,14 +325,14 @@
                 margin: 10px 0px;
                 display: flex;
 
-                @media screen and (max-width: 767px) {
+                @media screen and (max-width: 992px) {
                     display: block;
                 }
 
                 .job_card_left_wrp{
                     width: 80%;
 
-                    @media screen and (max-width: 767px) {
+                    @media screen and (max-width: 992px) {
                         width: 100%;
                      }
 
@@ -382,21 +382,22 @@
                             opacity: 1;
                         }
 
-                        @media screen and (max-width: 767px) {
+                        @media screen and (max-width: 992px) {
                             padding: 10px 16px;
+                            font: normal normal normal 14px/18px $font-Montserrat;
                         }
                     }
                 }
                
                 .job_card_right_wrp{
                     width: 20%;
-                    @media screen and (max-width: 767px) {
+                    @media screen and (max-width: 992px) {
                        display: flex;
                        padding-top: 20px;
                        width: 100%;
                     }
 
-                    @media screen and (min-width: 768px) and (max-width:1024px) {
+                    @media screen and (min-width: 992px) and (max-width:1024px) {
                         width: 30%;
                      }
                    
@@ -408,7 +409,7 @@
                         text-transform: uppercase;
                         opacity: 1;
     
-                        @media screen and (max-width: 767px) {
+                        @media screen and (max-width: 992px) {
                             text-align: left;
                         }
                     }
@@ -429,7 +430,7 @@
 
     .filter_mobile{
         display: none;
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 992px) {
             display: block;
             position: fixed;
             margin-bottom: 0;
@@ -449,6 +450,7 @@
             letter-spacing: 0.36px;
             color: $charcoal19;
             text-transform: uppercase;
+            cursor: pointer;
            
 
             &:after {
@@ -469,7 +471,7 @@
 
     .filter_mobile_button{
         display: none;
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 992px) {
             display:flex;
             position: fixed;
             margin-bottom: 0;
