--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -302,9 +302,10 @@
                     letter-spacing: 0.42px;
                     color: $white;
                     text-transform: uppercase;
-                    width: 40%;
-                    padding: 6px 0px;
+                    // width: 40%;
+                    // padding: 6px 0px;
                     margin-top: 30px;
+                    padding: 14px 45px;
 
                     &:hover{
                         color: $lgtDefault;
@@ -313,7 +314,8 @@
                     }
 
                     @media screen and (max-width: 992px) {
-                        width:80%;
+                        // width:80%;
+                        padding: 15px 20px;
                     }
                 }
             }
