Revert "Clear filter blur fix"
This reverts commit 898fbcc95e394cb29d8b36a63f5cc430cf972e28.

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -377,7 +377,8 @@
         margin-bottom: 0;
       }
       .disableColors{
-        // color: #4C4C4C;
+        opacity: 0.5;
+        cursor: not-allowed;
       }
     }
   }
@@ -555,12 +556,6 @@
     font-size: 18px;
     line-height: 0.8;
     transition: all .1s;
-  }
-  input[type="checkbox"]:not(:checked) + label{
-    color: $med-charcoal;
-  }
-  input[type="checkbox"]:checked + label {
-    color: $charcoal19;
   }
 }
 
