--- a/src/components/ColorSelector/styles.scss
+++ b/src/components/ColorSelector/styles.scss
@@ -13,7 +13,7 @@
   }
   &.disabled{
     pointer-events: none;
-    border:1px solid #E5E5E5 !important;
+    border:2px solid #618A8A !important;
   }
   padding: 2px; 
 }
