solved an issue of copy link

--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -418,6 +418,10 @@
 
                     .icon_wrp_ul{
                         float: right;
+                        button{
+                            border: none;
+                            background: transparent;
+                        }
                         .icon_wrp{
                             padding-left: 15px;
                         }
