--- a/src/containers/careerNew/components/JobDetail/jobDetail.scss
+++ b/src/containers/careerNew/components/JobDetail/jobDetail.scss
@@ -14,13 +14,17 @@
     .job_detail_form_wrp{
         background: $white;
         width:60%;
-        margin: -200px auto 100px;
+        margin: -250px auto 100px;
         box-shadow: 0px 3px 6px #00000029;
         padding: 50px;
         z-index: 2;
         position: relative;
 
-        @media screen and (max-width: 767px) {
+        @media screen and (min-width: 993px) and (max-width: 1200px){
+            margin: -150px auto 100px;
+        }
+
+        @media screen and (max-width: 992px) {
             width:85%;
             margin: 30px auto 100px;
             padding: 20px;
@@ -39,7 +43,7 @@
 
         .job_detail_form{
             display: flex;
-            @media screen and (max-width: 767px) {
+            @media screen and (max-width: 992px) {
                 display: block;
             }
 
@@ -47,7 +51,7 @@
                 width: 70%;
                 margin: 50px 0px;
 
-                @media screen and (max-width: 767px) {
+                @media screen and (max-width: 992px) {
                     width: 100%;
                 }
 
@@ -89,7 +93,7 @@
                 width: 30%;
                 margin: 55px 0px;
 
-                @media screen and (max-width: 767px) {
+                @media screen and (max-width: 992px) {
                     width: 85%;
                     margin: 35px 0px;
                 }
@@ -126,6 +130,13 @@
                         color: $charcoal19;
                         text-transform: uppercase;
                         opacity: 1;
+                    }
+
+                    li{
+                        button{
+                            border: none;
+                            background: transparent;
+                        }
                     }
                 }
             }
