--- a/src/containers/pdp/components/WallpaperFAQ/styles.scss
+++ b/src/containers/pdp/components/WallpaperFAQ/styles.scss
@@ -112,11 +112,12 @@
 }
 
 .mobileFaqContainer {
-    display: none;
-
-    &.active {
-        display: block;
-    }
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in;
+    // &.active {
+    //     max-height: fit-content;
+    // }
 }
 
 .faqs-container {
@@ -126,7 +127,7 @@
 @media screen and (max-width: 992px) {
     .horizontal {
         position: absolute !important;
-        right: 5px;
+        right: 20px;
     }
 
     .header-sections {
@@ -180,7 +181,7 @@
     }
 
     .accordion-title {
-        padding-right: 35px;
+        padding-right: 70px;
         letter-spacing: 0.8px;
     }
 }
@@ -209,8 +210,9 @@
 
 .horizontal{
     position: relative;
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
+    font-family: $font-Montserrat;
 
     &:before,
     &:after{
@@ -224,18 +226,18 @@
     &:before{
         top: 0;
         left: 50%;
-        width: 2px;
+        transform: translateX(-50%);
+        width: 1px;
         height: 100%;
-       margin-left: -1px;
     }
 
     /* horizontal line */
     &:after{
         top: 50%;
         left: 0;
+        transform: translateY(-50%);
         width: 100%;
-        height: 2px;
-        margin-top: -1px;
+        height: 1px;
     }
 }
 
