--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -17,12 +17,14 @@
 
 .active {
     img {
-        background: #fff;
-        border: 2px solid gray;
-        padding: 2px;
-        -webkit-box-shadow: -1px -2px 12px #999999;
-        -moz-box-shadow:    -1px -2px 12px #999999;
-        box-shadow:         -1px -2px 12px #999999;
+        &:first-child{
+            background: #fff;
+            border: 2px solid gray;
+            padding: 2px;
+            -webkit-box-shadow: -1px -2px 12px #999999;
+            -moz-box-shadow:    -1px -2px 12px #999999;
+            box-shadow:         -1px -2px 12px #999999;
+        }
     }
 }
 
