--- a/src/containers/pdp/components/wallpaperPopup/styles.scss
+++ b/src/containers/pdp/components/wallpaperPopup/styles.scss
@@ -51,6 +51,9 @@
 
 .field {
     margin-bottom: 20px;
+    input {
+        @include b4_12px_montserrat_charcoal();
+    }
 }
 
 .result-container {
