--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -367,3 +367,15 @@
         }
     }
 }
+
+.wallpaper-popup-body{
+    top: unset;
+    left: unset;
+    transform: unset;
+}
+
+.wallpaper-popup-container{
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
