--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -377,9 +377,15 @@
         margin-bottom: 0;
       }
       .disableColors{
+        // cursor: not-allowed;
         opacity: 0.5;
-        cursor: not-allowed;
       }
+    }
+    input[type="checkbox"]:not(:checked) + label{
+      @include b4_12px_montserrat_light_charcoal();
+    }
+    input[type="checkbox"]:checked + label{
+      @include b4_12px_montserrat_charcoal();
     }
   }
   .menulevel1-open {
@@ -486,6 +492,12 @@
     &.country-code-gc {
       top: 25px;
     }
+    input[type="checkbox"]:checked + label{
+      @include b4_12px_montserrat_charcoal();
+    }
+    input[type="checkbox"]:not(:checked) + label{
+      @include b4_12px_montserrat_light_charcoal();
+    }
   }
   input[type="radio"]:not(:checked) + label:before,
   input[type="radio"]:checked + label:before, [type="checkbox"]:not(:checked) + label:before,
@@ -539,6 +551,11 @@
     @include plp_color_filter();
     text-transform: capitalize;
     position: relative;
+    &.white-tick{
+      &:after{
+        border-color: #000 !important;
+      }
+    }
   }
 
   input[type="radio"]:not(:checked) + label:after,
@@ -548,7 +565,7 @@
     display: block;
     width: 6px;
     height: 10px;
-    border: solid #fff;
+    border: solid white;
     border-width: 0 2px 2px 0;
     position: absolute;
     top: 12px;
@@ -557,6 +574,7 @@
     line-height: 0.8;
     transition: all .1s;
   }
+  
 }
 
 .colorlabel {
