--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -413,15 +413,16 @@
       border-width: 0 1px 1px 0;
       width: 8px;
       height: 8px;
-      transform: rotate(313deg);
+      transform: rotate(45deg);
       top: 15px;
       position: absolute;
       right: 5px;
+      transition: transform 0.2s ease-in;
     }
   }
   .menulevel2-open {
     &:after {
-      transform: rotate(45deg);
+      transform: rotate(-135deg);
     }
   }
 }
