fixed show more and less

--- a/src/containers/careerNew/components/Listing/listing.scss
+++ b/src/containers/careerNew/components/Listing/listing.scss
@@ -24,7 +24,7 @@
                 margin-bottom: 40px;
         
                     .filter_label{
-                        text-align: center;
+                        // text-align: center;
                         font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
                         color: $charcoal19;
@@ -47,7 +47,7 @@
                           }
                     }
                     .filter_applied{
-                        text-align: center;
+                        // text-align: center;
                         font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
                         color: $charcoal19;
@@ -70,7 +70,7 @@
                           }
                     }
                     .filter_label_open {
-                        text-align: center;
+                        // text-align: center;
                         font: normal normal normal 12px/20px $font-Montserrat;
                         letter-spacing: 0.36px;
                         color: $charcoal19;
