--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -53,14 +53,16 @@
     @include pdp_label();
 
     .size-guide {
+        @include b5_10px_montserrat_charcoal();
         line-height: 50px;
-        font-size: 12px;
-        color: #000;
         text-decoration: underline;
         text-transform: none;
         // letter-spacing: 1px;
         cursor: pointer;
         text-underline-offset: 2px;
+        &:hover {
+            color: #3c7979;
+        }
     }
 
     &.colour {
