--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -147,8 +147,8 @@
   position: fixed;
   bottom: 0;
   right: 0;
-  width: 300px;
-  height: 216px;
+  width: 362px;
+  height: 263px;
   background-color: #fff;
   z-index: 100;
   padding: 10px 30px;
@@ -167,34 +167,127 @@
     color: gray;
   }
   h3 {
-    font-family: $font-Montserrat;
-    color: $charcoal19;
-    font-size: 12px;
+    @include b3_14px_montserrat_caps_charcoal();
+    // font-family: $font-Montserrat;
+    // color: $charcoal19;
+    // font-size: 12px;
     line-height: 30px;
-    text-transform: capitalize;
-    font-weight: bold;
+    // text-transform: capitalize;
+    // font-weight: bold;
     letter-spacing: 0;
     padding: 0;
+    margin-bottom: -30px;
   }
   p {
-    font-family: $font-Montserrat;
-    color: $charcoal19;
-    font-size: 12px;
+    @include b4_12px_montserrat_charcoal();
+    // font-family: $font-Montserrat;
+    // color: $charcoal19;
+    // font-size: 12px;
     line-height: 20px;
+    margin-bottom: -15px;
     a {
       color: $gold;
       text-decoration: underline;
     }
   }
+  .preferencesLink{
+    @include b4_12px_montserrat_charcoal_caps();
+    border-bottom: 1px solid $charcoal19;
+    cursor: pointer;
+    &:hover{
+      @include b4_12px_montserrat_gold_caps();
+      border-bottom: 1px solid $gold;
+    }
+  }
   .ok-btn {
-    background-color: $aqua;
-    padding: 10px 50px;
-    color: #fff;
+    @include b3_14px_caps_white();
+    background-color: $med-charcoal;
+    padding: 15px 30px;
+    // color: #fff;
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    border: 1px solid $med-charcoal;
+    // font-size: 14px;
+    &:hover{
+      @include b3_14px_montserrat_caps_charcoal();
+      background-color: $white;
+    }
   }
 }
+
+.eucookieclass{
+  margin: auto;
+  left: 50%;
+  top: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  width: 500px;
+
+  .heading{
+    @include b3_14px_montserrat_caps_charcoal();
+  }
+
+  hr{
+    border: 1px solid $light-beige;
+    width: 100%;
+  }
+
+  .question{
+    @include b3_14px_montserrat_charcoal();
+  }
+  
+  .answer{
+    @include b4_12px_montserrat_charcoal();
+  }
+  .prefhead{
+    @include b2_14px_charcoal_lora();
+    margin-top: 30px;
+  }
+
+  .btnWrp{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+
+    .savebtn{
+      @include b3_14px_montserrat_caps_charcoal();
+      background-color: $white;
+      padding: 15px 20px;
+      // color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      border: 1px solid $med-charcoal;
+      // font-size: 14px;
+      &:hover{
+        @include b3_14px_caps_aqua();
+        color: #3C7979;
+        border: 1px solid #3C7979;
+      }
+    }
+  
+    .acceptbtn{
+      @include b3_14px_caps_white();
+      background-color: $med-charcoal;
+      padding: 15px 40px;
+      // color: #fff;
+      cursor: pointer;
+      display: inline-block;
+      border: 1px solid $med-charcoal;
+      // font-size: 14px;
+      &:hover{
+        @include b3_14px_montserrat_caps_charcoal();
+        background-color: $white;
+      }
+    }
+  }
+  
+}
+
+.euPref{
+  align-items: flex-start;
+}
+
 .close-popup {
   position: absolute;
   right: 0px;
@@ -288,10 +381,19 @@
 
 
   .cookieclass {
-    width: 300px;
-    height: 216px;
-    padding: 10px 15px;
+    width: 100%;
+    height: 235px;
+    // padding: 10px 15px;
     margin: 5px;
+    padding: 0;
+    margin-bottom: -20px;
+    border: none;
+    p{
+      padding: 5px 20px;
+    }
+    .ok-btn{
+      width: 100%;
+    }
   }
 }
 
