--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -470,6 +470,12 @@
     line-height: 40px;
     a {
       color: $charcoal19;
+      &.wishlist-link{
+        position: relative;
+        span{
+          margin-left: 25px;
+        }
+      }
     }
     > :nth-child(2) {
       padding-left: 20px;
@@ -480,7 +486,10 @@
       top: 36px;
 
       &.wishlist-icon {
-        top: 34px;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        transform: translateY(-50%);
       }
     }
     &.currency {
@@ -586,6 +595,7 @@
         display: block;
         &.highlight{
           @include b4_12px_montserrat_semibold_charcoal();
+          font-weight: $medium;
         }
       }
       li {
@@ -669,7 +679,7 @@
   .menulevel2-open {
     span{
       p{
-        font-weight: bold;
+        font-weight: $semibold;
       }
     }
     &:after {
@@ -1538,7 +1548,7 @@ ul.inner-menu-mobile {
     }
   }
   .title {
-    @include b3_14px_montserrat_bold_charcoal();
+    @include b3_14px_montserrat_semibold_charcoal();
     text-transform: uppercase;
     a {
         color: inherit;
