--- a/src/containers/giftcard/styles.scss
+++ b/src/containers/giftcard/styles.scss
@@ -33,7 +33,7 @@ h2 {
 
 .clr-note {
   @include b5_10px_montserrat_charcoal();
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
 }
 
 .gift-font {
@@ -67,10 +67,28 @@ h2 {
 .subscribe{
   label {
     @include b5_10px_montserrat_charcoal();
-    letter-spacing: 0.5px;
+    letter-spacing: 0.3px;
     a {
       color: $charcoal19;
     }
+  }
+}
+
+@media screen and (max-width: 992px){
+  .subscribe {
+    text-align: center !important;
+  }
+  .note {
+    text-align: center !important;
+  }
+}
+
+@media screen and (max-width: 767px){
+  .subscribe {
+    text-align: left !important;
+  }
+  .note {
+    text-align: left !important;
   }
 }
 
@@ -104,7 +122,6 @@ h2 {
   .image-select-btn-container {
     height: 60px;
     width: 350px;
-    font-family: $font-Montserrat;
     .image-select-btn{
       height: 100%;
       width: 101%;
@@ -114,6 +131,7 @@ h2 {
       background: $aqua;
       border: 1.5px solid $aqua;
       letter-spacing: 0.5px;
+      font-family: $font-Montserrat;
       span {
         width: 10px;
         display: inline-block;
@@ -132,9 +150,37 @@ h2 {
           border-left: none;
         }
       }
+      &.error-btn{
+        background: #9f9f9f;
+        border: 1px solid #9F9F9F;
+        &:hover{
+          color: $white;
+          background: #9f9f9f;
+        }
+      }
     }
   }
 }
+
+// @media (hover: hover) {
+//   .image-select-btn{
+//       &:hover{
+//         color: $aqua;
+//         background: transparent;
+//         span{
+//           border: 1px solid $aqua;
+//           border-top: none;
+//           border-left: none;
+//         }
+//         &.error-btn{
+//           &:hover{
+//             color: $white;
+//             background: #9f9f9f;
+//           }
+//         }
+//       }
+//   }
+// }
 
 .btn-gc {
   position: relative;
@@ -504,8 +550,8 @@ form {
   margin-left: 15px;
   margin-right: 15px;
 }
-.width100 {
-  width: 100%;
+.width65 {
+  width: 65%;
 }
 
 @media screen and (max-width: 992px) {
@@ -519,9 +565,9 @@ form {
 
 .note {
   @include b5_10px_montserrat_charcoal();
-  letter-spacing: 0.5px;
-  text-align: left;
+  letter-spacing: 0.3px;
   margin: 8px 10px;
+  text-align: left;
 }
 
 hr {
@@ -543,6 +589,15 @@ hr {
   background-color: #9F9F9F !important;
 }
 
+@media screen and (max-width:768px){
+  .section-2-full-width {
+    width: 100vw;
+    position: absolute;
+    bottom: 0;
+    left: -3px;
+  }
+}
+
 .mobile-full-width-button {
   width: 100vw;
   position: absolute;
@@ -561,8 +616,20 @@ hr {
 .button-sticky{
   position: sticky;
   bottom: 60px;
+  margin: 0px;
 }
 
 .gc-no-pad{
   padding-bottom: 0px;
+}
+
+.tab-price-block{
+  input[type="number"]{
+    padding: 15px 15px 15px 70px;
+  }
+}
+
+.section3ButtonPositioningFix{
+  margin: 0px;
+  transform: translateY(6px);
 }
