--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -710,36 +710,38 @@
   margin-top: 20px;
 
   .loadMoreBtn {
-    border: 1px solid #548B8B;
+    @include b4_12px_medium_aqua_caps();
+    border: 1px solid $aqua;
     text-align: center;
-    font: normal normal medium 12px/20px $font-Montserrat;
+    // font: normal normal medium 12px/20px $font-Montserrat;
     letter-spacing: 0.36px;
-    color: #548B8B;
-    text-transform: uppercase;
+    // color: #548B8B;
+    // text-transform: uppercase;
     opacity: 1;
     background: $white;
     padding: 8px 20px;
 
     &:hover {
-      background-color: #548B8B;
+      background-color: $aqua;
       color: $white;
     }
     
   }
 
   .backToTopBtn {
+    @include b4_12px_montserrat_charcoal_caps();
     text-align: center;
-    font: normal normal normal 12px/20px $font-Montserrat;
+    // font: normal normal normal 12px/20px $font-Montserrat;
     letter-spacing: 0.36px;
-    color: #191919;
-    text-transform: uppercase;
+    // color: #191919;
+    // text-transform: uppercase;
     opacity: 1;
     border: none;
     background: white;
     border-bottom: 1px solid;
 
     &:hover {
-      color: #3C7979;
+      color: $aqua;
     }
 
   }
