--- a/src/components/header/templates/styles.scss
+++ b/src/components/header/templates/styles.scss
@@ -56,7 +56,7 @@
     }
     .subheading {
         @include b5_10px_montserrat_charcoal();
-        letter-spacing: 0.09em;
+        letter-spacing: 0.50px;
         border-bottom: none;
         line-height: 16px;
         display: block;
@@ -99,13 +99,11 @@
         }
     }
     .subheading {
-        font-size: 11px;
-        font-family: "LatoFont", "Helvetica", "Arial";
-        letter-spacing: 0.09em;
-        color: #1b1b1b;
+        @include b5_10px_montserrat_charcoal();
+        letter-spacing: 0.50px;
         border-bottom: none;
-        line-height: 18px;
-        margin-bottom: 8px;
+        line-height: 16px;
+        display: block;
     }
     .block-heading {
         display: block;
@@ -141,12 +139,11 @@
         }
     }
     .subheading {
-        font-size: 11px;
-        font-family: "LatoFont", "Helvetica", "Arial";
-        letter-spacing: 0.09em;
-        color: #1b1b1b;
+        @include b5_10px_montserrat_charcoal();
+        letter-spacing: 0.50px;
         border-bottom: none;
-        line-height: 18px;
+        line-height: 16px;
+        display: block;
     }
     .block-heading {
         display: block;
@@ -196,12 +193,11 @@
             @include b4_12px_montserrat_charcoal();
         }
         .subheading {
-            font-size: 11px;
-            font-family: "LatoFont", "Helvetica", "Arial";
-            letter-spacing: 0.09em;
-            color: #1b1b1b;
+            @include b5_10px_montserrat_charcoal();
+            letter-spacing: 0.50px;
             border-bottom: none;
-            line-height: 18px;
+            line-height: 16px;
+            display: block;
         }
     }
     // .block-cta {
@@ -256,13 +252,11 @@
         }
         .subheading {
             display: none;
-            font-size: 11px;
-            font-family: "LatoFont", "Helvetica", "Arial";
+            @include b5_10px_montserrat_charcoal();
             letter-spacing: 0.09em;
-            color: #000;
             border-bottom: none;
-            padding-left: 20px;
-            line-height: 18px;
+            line-height: 16px;
+            display: block;
         }
     }
 }
@@ -273,6 +267,7 @@
 .title {
     border-bottom: none;
     // padding-left: 20px;
+    letter-spacing: 0.50px;
     line-height: 30px;
     @include b4_12px_montserrat_semibold_charcoal();
     text-transform: uppercase;
@@ -319,10 +314,8 @@
         }
     }
     .subheading {
-        font-size: 11px;
-        font-family: "LatoFont", "Helvetica", "Arial";
+        @include b5_10px_montserrat_charcoal();
         letter-spacing: 0.09em;
-        color: #1b1b1b;
         border-bottom: none;
         line-height: 16px;
         display: block;
@@ -382,8 +375,8 @@
         .subheading {
             display: none;
             font-size: 11px;
-            font-family: "LatoFont", "Helvetica", "Arial";
-            letter-spacing: 0.09em;
+            font-family: $font-Montserrat;
+            letter-spacing: 0.50px;
             color: #000;
             border-bottom: none;
             padding-left: 20px;
